# pico-e32

./: .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  Makefile  README.md
.ai/: AGENTS.md  CLAUDE.md
assets/: README.md  gen_celeste_cart.py  pico8_font.h
boards/esp-eye/: sdkconfig.defaults
boards/m5stack-timer-cam/: board.mk  sdkconfig.defaults
boards/makerfabs-ili9488/: sdkconfig.defaults
boards/makerfabs-ili9488-r1/: board.cpp  board.h  board_pins.h
boards/makerfabs-st7701-4in/: sdkconfig.defaults
components/fake08/: CMakeLists.txt
components/ili9488/: CMakeLists.txt  ili9488.c  ili9488.cpp  ili9488.h  ili9488_esp_lcd.c
components/input/: CMakeLists.txt  input.h  input_i2c.c  input_scheduled.c  input_serial.c  input_stub.c  input_touch.c
components/input/host_test/: run.sh  test_input_scheduled.c
components/input/host_test/stubs/: esp_err.h  esp_log.h
components/input/host_test/stubs/driver/: uart.h
components/input/host_test/stubs/freertos/: FreeRTOS.h  task.h
components/sdcard_spi/: CMakeLists.txt  sdcard_spi.c  sdcard_spi.h
docs/: README.md  pico-e32-development-plan.html  pico-e32-development-plan.md  pico-e32-todo.md
docs/design-specification/: README.md  pico-e32-runtime-feasibility.html  pico-e32-runtime-feasibility.md  pico-e32-silicon-decision.html
docs/hardware/: pico-e32-bench-camera.md  pico-e32-display.md
docs/reference/: README.md  pico-e32-makerfabs-boards.md  pico-e32-runtime-feasibility.md  pico-e32-silicon-decision.md  z8lua-speedup-research.md
docs/runtime/: pico-e32-fake08-codemap.md  pico-e32-fake08-fps-report.html  pico-e32-fake08-input.md  pico-e32-fake08-port-report.html  pico-e32-fake08-port.md  pico-e32-fake08-sd-cart-report.html  pico-e32-fake08-sd-component-report.html  pico-e32-fake08-touch-ui.html  pico-e32-host-graphics.md
docs/worklog/: 2026-07-14-phase0-gate1-display.md  2026-07-14-phase0-gate2-luabench.md  2026-07-14-phase0-gate3-host.md  2026-07-14-z8lua-submodule.md  2026-07-15-bench-camera.md  2026-07-15-host-graphics.md  2026-07-16-esp-lcd-vs-lovyangfx.md  2026-07-16-hg3-spr.md  2026-07-16-hg4-map.md  2026-07-16-hg5-print.md  2026-07-16-hg6-pal-camera-clip.md  2026-07-16-panel-rev1-pinmap.md  2026-07-16-yflip-and-gate1-fps.md  2026-07-17-fake08-fps-strip-blit.md  2026-07-17-fake08-input-seam.md  2026-07-17-fake08-port-vendor.md  2026-07-17-fake08-sd-cart-loader.md  2026-07-17-fake08-sd-component.md  2026-07-17-fake08-transition-spike.md  2026-07-18-celeste-playtest-clear.md  2026-07-18-fake08-celeste-fps-resume.md  2026-07-19-playtest-harness-agent-solve.md  2026-07-19-playtest-m9-racer.md  2026-07-20-celeste-closed-loop-fc-scheduled.md
docs/worklog/html/: 2026-07-14-phase0-gate1-display.html  2026-07-14-phase0-gate2-luabench.html  2026-07-14-phase0-gate3-host.html  2026-07-14-z8lua-submodule.html  2026-07-15-bench-camera.html  2026-07-15-host-graphics.html  2026-07-16-esp-lcd-vs-lovyangfx.html  2026-07-16-hg3-spr.html  2026-07-16-hg4-map.html  2026-07-16-hg5-print.html  2026-07-16-hg6-pal-camera-clip.html  2026-07-16-panel-rev1-pinmap.html  2026-07-16-yflip-and-gate1-fps.html  2026-07-17-fake08-fps-strip-blit.html  2026-07-17-fake08-input-seam.html  2026-07-17-fake08-port-vendor.html  2026-07-17-fake08-sd-cart-loader.html  2026-07-17-fake08-sd-component.html  2026-07-17-fake08-transition-spike.html  2026-07-18-celeste-playtest-clear.html  2026-07-18-fake08-celeste-fps-resume.html  2026-07-19-playtest-harness-agent-solve.html  index.html
firmware/: README.md
firmware/pico-e32-bench-cam/: CMakeLists.txt  sdkconfig.defaults
firmware/pico-e32-bench-cam/main/: CMakeLists.txt  cam_main.c  idf_component.yml
firmware/pico-e32-display-test/: CMakeLists.txt  README.md  sdkconfig.defaults
firmware/pico-e32-display-test/main/: CMakeLists.txt  main.c
firmware/pico-e32-fake08/: CMakeLists.txt  sdkconfig.defaults
firmware/pico-e32-fake08/main/: CMakeLists.txt  main.cpp  sd_mount.cpp  sd_mount.h
firmware/pico-e32-host/: CMakeLists.txt  sdkconfig.defaults
firmware/pico-e32-host/host/: Makefile  host
firmware/pico-e32-host/host/frames/: frame_000.raw  frame_001.raw  frame_002.raw  frame_003.raw  frame_004.raw  frame_005.raw  frame_006.raw  frame_007.raw  frame_008.raw  frame_009.raw
firmware/pico-e32-host/main/: CMakeLists.txt  host_main.cpp
firmware/pico-e32-luabench/: CMakeLists.txt  README.md  sdkconfig.defaults
firmware/pico-e32-luabench/bench/: bench.cpp  bench.h  celeste_bench.cpp
firmware/pico-e32-luabench/host/: Makefile  host_main.cpp
firmware/pico-e32-luabench/main/: CMakeLists.txt  esp_main.cpp
references/: README.md
test/playtest/: .gitignore  README.md  fc_sched.py  gym.py  harness.py  live.py  orchestrate.py  render.py  search.py  test_fc_sched.py  test_fps.py  test_live.py  test_orchestrate.py  test_sim_smoke.py  test_trace.py  trace.py
test/playtest/celeste/: README.md  celeste_playtest.py  closed_loop.py  fc_device.py  fc_latency.py  make_solution.py  orchestrate_run.py  render_compare.py  render_run.py  solution.trace.json  solve.py  verify_solution.py
test/playtest/celeste/celeste_solver/: README.md  celeste_sim.py  solve.py
test/playtest/celeste/routes/: room400_altroute_viaD.json  room400_route.json
test/playtest/fake08-sim/: .gitignore  Makefile  README.md  fake08sim.py  host_sim.cpp  sim.cpp
test/playtest/pico_racer/: README.md  racer_fc_device.py  racer_playtest.py  solution.trace.json  solve.py  verify_solution.py
tools/: bench_cam.env.example  capture_frame.sh  celeste_playtest.py  p8_png.py  record_video.sh  undistort.py
tools/celeste_solver/: README.md  celeste_sim.py  solve.py
tools/fake08-sim/: Makefile  README.md  fake08sim.py  render_run.py  sim.cpp
